--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <a href="src/index.html">Task 1</a>
+    <a href="src/index.html">HW-6-Link</a>
   </body>
 </html>
